# blobandconquer

./: .gitignore  CMakeLists.txt  CREDITS-DATA.md  Makefile  Makefile.windows  README-DATA.md  README.md  makefile  makefile.windows
data/bsp/: ambush.bsp  ambush.map  ancientTomb1.bsp  ancientTomb1.map  ancientTomb2.bsp  ancientTomb2.map  ancientTomb3.bsp  ancientTomb3.map  bioMechTower1.bsp  bioMechTower1.map  biomechTower2.map  biomechTower3.bsp  biomechTower3.map  bossBattle1.bsp  bossBattle1.map  bossBattle2.bsp  bossBattle2.map  bossBattle3.bsp  bossBattle3.map  bossBattle4.bsp  bossBattle4.map  caves1.bsp  caves1.map  caves2.bsp  caves2.map  caves3.bsp  caves3.map  crypt.bsp  crypt.map  desimilator.bsp  desimilator.map  enemyBase1_1.bsp  enemyBase1_1.map  enemyBase1_2.bsp  enemyBase1_2.map  enemyBase1_3.bsp  enemyBase1_3.map  enemyBase2_0.bsp  enemyBase2_0.map  enemyBase2_1.bsp  (+26 more)
data/combatResources/: models  sounds  textures
data/gameDefs/: bioTankCommander  blobs  cryptBoss  defines.h  enemies  eyeDroidCommander  features  items  specialist  spiderBlobCommander  weapons
data/misc/: letterFrequencyTable
data/missions/: bossTest  hub  mission01  mission02  mission03  mission04  mission05  mission06  mission07  mission08  mission09  mission10  mission11  mission12  mission13  mission14  mission15  mission16  mission17  mission18  mission19  mission20  mission21  mission22  mission23  mission24  mission25  mission26  mission27  mission28  mission29  mission30  mission31  training
data/texturespecs/: common  liquid  list  mech  virtual
data/widgets/: additional  cheats  controlOptions  gameover  generalOptions  inGameOptions  language  loadSave  masterMind  status  title
doc/: README  index.html
doc/pages/: about.html  blobs.html  commandline.html  contents.html  controls.html  features.html  installation.html  levelBuilding.html  license.html  localisation.html  objectives.html  options.html  playing.html  saving.html  story.html  stylesheet.css  tips.html  trouble.html  violence.html
gfx/game/: orderIcon1.tga  orderIcon2.tga  orderIcon3.tga  orderIcon4.tga
gfx/md2/: spiderBlob.md2
gfx/primitive/: altSwitch.primitive  bioMechBlob.primitive  blob.primitive  bob.primitive  c4.primitive  cryptBoss.primitive  darkBlob.primitive  darkEyeDroid.primitive  energyBall.primitive  eyeDroidCommander.primitive  eyedroid.primitive  item.primitive  keycard.primitive  lifeCrystal.primitive  map.primitive  medipack.primitive  weapon.primitive
icons/: blobAndConquer.desktop
locale/: README  messages.pot  pl.mo  pl.po
patches/: blobandconquer_accumbuffer.diff
src/: attributes.h  battle.cpp  battle.h  camera.cpp  camera.h  defs.h  game.cpp  game.h  headers.h  init.cpp  init.h  main.cpp  main.h  pak.cpp  pak.h  player.cpp  player.h  title.cpp  title.h
(+443 files in other folders)
